--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -lpthread")
 add_executable(server main.cpp TcpServer.cpp TcpServer.h DeadlineTimer.h DeadlineTimer.cpp Communist.h Communist.cpp
         timer.h timer.cpp)
 
-add_executable(test test.cpp TcpServer.cpp TcpServer.h DeadlineTimer.h DeadlineTimer.cpp Communist.h Communist.cpp
-        timer.h timer.cpp
-        ../gtest/gtest-all.cc
-        ../gtest/gtest.h
-        ../gtest/gtest_main.cc)
+add_executable(test test.cpp)
 
-target_link_libraries(test -lpthread)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread")
