--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ SET(CMAKE_CXX_FLAGS -pthread)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -lpthread")
 
 add_executable(server main.cpp TcpServer.cpp TcpServer.h DeadlineTimer.h DeadlineTimer.cpp Communist.h Communist.cpp
-        timer.h timer.cpp)
+        timer.h timer.cpp Context.h Context.cpp)
 
 add_executable(test test.cpp)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
